# papercut

./: README.md
bird/: bird.bat  bird4.bat
chinese/100-chicken/: 2svgall
chinese/chicken-pie/: 2svgall
examples/: fu.bat  goats.bat  spring.bat
misc/: cat-lady.bat  story.bat  tree.bat  women.bat
tosvg/code/: CMakeLists.txt  CurveCSS.cpp  CurveCSS.h  main.cpp
tosvg/code/.hg/: hgrc  last-message.txt  sourcetreeconfig  undo.backup.dirstate  undo.desc  undo.dirstate
tosvg/code/.hg/cache/: branch2-served  rbc-revs-v1  tags
tosvg/code/.hg/store/: 00changelog.i  00manifest.i  fncache  undo.backup.fncache  undo.backup.phaseroots
tosvg/code/.hg/store/data/: _c_make_lists.txt.i  _curve_c_s_s.cpp.i  _curve_c_s_s.h.i  main.cpp.i  opencvstd.h.i  simple__svg__1.0.0.hpp.i
tosvg/code/.hg/store/data/vc__files/: tosvg.sln.i  tosvg.vcxproj.filters.i  tosvg.vcxproj.i
tosvg/code/vc_files/: tosvg.sln  tosvg.vcxproj  tosvg.vcxproj.filters
tosvg/examples/: 12.bat  fish.bat  newyear.bat  newyear2.bat  totoro.bat
